get the annotated VCF file